force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>Global field - (Data Universal Numbering System ) is a number that is assigned to each of our locations.  For use in credit decisions.  Also referred to as D&amp;B Nbr.  Currently used by Store Data and IA.
Field Type: GBL
Integrated: N</description>
    <inlineHelpText>Enter the 9-digit DUNS Number aka D&amp;B Number. 

Responsible Owner: Retail Accounting and Credit</inlineHelpText>
    <label>DUNS Nbr (D&amp;B Nbr)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>