force-app/main/default/objects/Account/fields/EDI_Orders__c.field-meta.xml
<CustomField>
    <fullName>EDI_Orders__c</fullName>
    <description>Indicates if this account has EDI Orders</description>
    <inlineHelpText>Indicates if this account has EDI Orders</inlineHelpText>
    <label>EDI Orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>