force-app/main/default/objects/Account/fields/Email_A_P__c.field-meta.xml
<CustomField>
    <fullName>Email_A_P__c</fullName>
    <description>The Accounts Payable Email address. 
Type: M3
Integrated: N</description>
    <inlineHelpText>The Accounts Payable Email address. Entered in salesforce, not M3.</inlineHelpText>
    <label>Email: A/P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>