force-app/main/default/objects/Account/fields/Email_Application_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Application_To__c</fullName>
    <label>Email Application To</label>
    <type>Email</type>
</CustomField>