force-app/main/default/objects/Account/fields/Email_Confirmations_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmations_Offered_Date__c</fullName>
    <description>The last time customer service offered to update the email address for sending confirmations.</description>
    <inlineHelpText>The last time customer service offered to update the email address for sending confirmations.</inlineHelpText>
    <label>Email:Confirmations Offered Date</label>
    <type>Date</type>
</CustomField>