force-app/main/default/objects/Account/fields/Email_financials_to_CPA__c.field-meta.xml
<CustomField>
    <fullName>Email_financials_to_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email financials to CPA
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please check this box if the finance team must Email financials to the CPA .</inlineHelpText>
    <label>Email financials to CPA</label>
    <type>Checkbox</type>
</CustomField>