force-app/main/default/objects/Account/fields/Email_financials_to_Owner_s__c.field-meta.xml
<CustomField>
    <fullName>Email_financials_to_Owner_s__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email financials to Owner(s)
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please check this box if the finance team must Email financials to Owner(s).</inlineHelpText>
    <label>Email financials to Owner(s)</label>
    <type>Checkbox</type>
</CustomField>