force-app/main/default/objects/Account/fields/Email_financials_to_Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Email_financials_to_Store_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email financials to Store manager
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please check this box if the finance team must Email financials to Store manager.</inlineHelpText>
    <label>Email financials to Store Manager</label>
    <type>Checkbox</type>
</CustomField>