force-app/main/default/objects/Account/fields/Email_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoices__c</fullName>
    <description>NOT USED because M3 field may have multiple email addresses or may have unexpected data. New field was defined created as a text field  
Type: M3
Integrated: N</description>
    <label>Obsolete Email: Invoices</label>
    <type>Email</type>
</CustomField>