force-app/main/default/objects/Account/fields/Email_Invoices_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoices_Offered_Date__c</fullName>
    <description>The last time customer service offered to update the email address for sending invoices.</description>
    <inlineHelpText>The last time customer service offered to update the email address for sending invoices.</inlineHelpText>
    <label>Email:Invoices Offered Date</label>
    <type>Date</type>
</CustomField>