force-app/main/default/objects/Account/fields/Email_Invoices_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoices_Text__c</fullName>
    <description>The email address used for invoices. Replaces &quot;Email: Invoices&quot; email field.
Type: M3
Integrated: Y</description>
    <inlineHelpText>The email address used for invoices</inlineHelpText>
    <label>Email: Invoices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>