force-app/main/default/objects/Account/fields/Email_Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Email_Order_Confirmation__c</fullName>
    <description>Not Used - data type was not compatible with M3 data.</description>
    <label>Obsolete Email: Order Confirmation</label>
    <type>Email</type>
</CustomField>