force-app/main/default/objects/Account/fields/Email_Order_Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Order_Confirmation_Text__c</fullName>
    <description>Email address used for order Confirmations. Replaces &quot;Email: Order Confirmation&quot; email field.
Type: M3
Integrated: N</description>
    <inlineHelpText>The email address for order confirmations. Sent from M3.</inlineHelpText>
    <label>Email: Order Confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>