force-app/main/default/objects/Account/fields/Emailing_DB_Qty__c.field-meta.xml
<CustomField>
    <fullName>Emailing_DB_Qty__c</fullName>
    <description>This is the emailing Data base quantity. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This is the emailing database quantity (the number of people we email for this account).

Responsible Owner: Marketing</inlineHelpText>
    <label>Emailing DB Qty</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>