force-app/main/default/objects/Account/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <description>This is for the emergency contact name. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This is for the emergency contact name.

Responsible Owner: None</inlineHelpText>
    <label>Emergency Contact</label>
    <length>64</length>
    <type>Text</type>
</CustomField>