force-app/main/default/objects/Account/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>The field holds an extension number when applicable, since salesforce does not have a standard field for this.  
Type: GBL
Integrated: N</description>
    <inlineHelpText>Phone number extension</inlineHelpText>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>