force-app/main/default/objects/Account/fields/External_ID_Acct_Bus_Dev__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Acct_Bus_Dev__c</fullName>
    <description>External ID for Account</description>
    <externalId>true</externalId>
    <label>External ID Acct Bus Dev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>