force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>This is the URL to facebook. 
Field Type: GBL
Integrated: N</description>
    <inlineHelpText>This is the URL to facebook.

Responsible Owner: Marketing</inlineHelpText>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>