force-app/main/default/objects/Account/fields/Facility_Code__c.field-meta.xml
<CustomField>
    <fullName>Facility_Code__c</fullName>
    <description>Field Type: M3
Integrated: Y</description>
    <label>Facility Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>