force-app/main/default/objects/Account/fields/Federal_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID__c</fullName>
    <label>Federal ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>