force-app/main/default/objects/Account/fields/Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination__c</fullName>
    <description>Integrated with the Search Key field from M3.
Field Type: M3
Integrated: Y</description>
    <inlineHelpText>This is the final destination of shipments to this account</inlineHelpText>
    <label>Final Destination/Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>