force-app/main/default/objects/Account/fields/Fixture_Type__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Type__c</fullName>
    <description>This is the display type at the store.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This is the display type at the Store.

Responsible Owner: Dealer Operations and Store Development</inlineHelpText>
    <label>Obsolete Fixture Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metal Outriggers</fullName>
            </value>
            <value>
                <fullName>Metal Outriggers/Slatwall</fullName>
            </value>
            <value>
                <fullName>Sawtooth</fullName>
            </value>
            <value>
                <fullName>Slatwall Flat</fullName>
            </value>
            <value>
                <fullName>Slatwall with bays</fullName>
            </value>
            <value>
                <fullName>Slatwall with bays/ Wood Outriggers</fullName>
            </value>
            <value>
                <fullName>Wood Outriggers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>