force-app/main/default/objects/Account/fields/Floor_Surface_Composition__c.field-meta.xml
<CustomField>
    <fullName>Floor_Surface_Composition__c</fullName>
    <description>This is the floor surface composition. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This is the floor surface composition.

Responsible Owner: Dealer Operations and Store Development</inlineHelpText>
    <label>Floor Surface Composition</label>
    <length>32</length>
    <type>Text</type>
</CustomField>