force-app/main/default/objects/Account/fields/Footwear_Spec_Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>Footwear_Spec_Applicable_To__c</fullName>
    <description>Relates to Footwear Spec Notes and identifies if the details apply to all locations or varies by location</description>
    <inlineHelpText>Identify if the Footwear Spec Notes apply to all locations or varies by location</inlineHelpText>
    <label>Footwear Spec Applicable To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applies to all locations</fullName>
            </value>
            <value>
                <fullName>May vary by location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>