force-app/main/default/objects/Account/fields/Forecasted_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Order_Notes__c</fullName>
    <description>Additional information regarding the forecasted orders 
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field is used to provide information regarding the forecasted orders for this account.</inlineHelpText>
    <label>Forecasted Order Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>