force-app/main/default/objects/Account/fields/Forecasted_Orders__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Orders__c</fullName>
    <description>Indicates whether this account has forecasted orders
Field Type: M3
Integrated: N</description>
    <inlineHelpText>Indicates customer sends forecasted orders</inlineHelpText>
    <label>Forecasted Orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>