force-app/main/default/objects/Account/fields/Freeze_Area_Assigment__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Area_Assigment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freeze Area Assigment</label>
    <type>Checkbox</type>
</CustomField>