force-app/main/default/objects/Account/fields/FYI_Notes__c.field-meta.xml
<CustomField>
    <fullName>FYI_Notes__c</fullName>
    <description>Additional information and tidbits from the person who works the account on a regular basis
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field contains additional tidbits or details about the customer that may help when servicing the account.</inlineHelpText>
    <label>FYI Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>