force-app/main/default/objects/Account/fields/Garment_PPE__c.field-meta.xml
<CustomField>
    <fullName>Garment_PPE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Store&apos;s inventory includes PPE Garments</description>
    <inlineHelpText>Store&apos;s inventory includes PPE Garments 
Responsible for data: Store Dev, Dealer Operations</inlineHelpText>
    <label>Garment (PPE)</label>
    <type>Checkbox</type>
</CustomField>