force-app/main/default/objects/Account/fields/Geocode_Message__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Message__c</fullName>
    <description>This is the Geocode message returned by the Service.
Field Type: M3
Integrated: Y</description>
    <inlineHelpText>This is the Geocode message returned by the Service.

Responsible Owner: M3 Integration</inlineHelpText>
    <label>Geocode Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>