force-app/main/default/objects/Account/fields/Geocode_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Status__c</fullName>
    <description>This is the Geocode status regarding the &quot;GET&quot; of the latitude and longitude fields by the service. 
Field Type: M3
Integrated: Y</description>
    <inlineHelpText>This is the Geocode Status corresponding to the latitude and longitude fields. 

Responsible Owner: M3 Integration</inlineHelpText>
    <label>Geocode Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>