force-app/main/default/objects/Account/fields/Gift_Card_Participant__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates of the store is participates in the gift card program. 
Field Type: Store Data
Integrated: Y - SF&gt;Xstore</description>
    <inlineHelpText>This field indicates of the store is participates in the gift card program.

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Gift Card Participant</label>
    <type>Checkbox</type>
</CustomField>