force-app/main/default/objects/Account/fields/Group_Invoice_By__c.field-meta.xml
<CustomField>
    <fullName>Group_Invoice_By__c</fullName>
    <description>Dependent on the Invoice Attributes Required. Should only includes values that have been selected in the Invoice Attributes Required field.</description>
    <inlineHelpText>Dependent on the Invoice Attributes Required. Should only includes values that have been selected in the Invoice Attributes Required field.</inlineHelpText>
    <label>Group Invoice By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authform</fullName>
                <label>Auth form #</label>
            </value>
            <value>
                <fullName>AuthorizerManager</fullName>
                <label>Authorizer / Manager</label>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>BusinessUnit</fullName>
                <label>Business Unit</label>
            </value>
            <value>
                <fullName>Certificate</fullName>
                <label>Certificate #</label>
            </value>
            <value>
                <fullName>ChargeCode</fullName>
                <label>Charge Code</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>CostCenter</fullName>
                <label>Cost Center</label>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>EmployeeID</fullName>
                <label>Employee ID</label>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
                <label>Project #</label>
            </value>
            <value>
                <fullName>Purchaseorder</fullName>
                <label>Purchase order</label>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>TicketReceipt</fullName>
                <label>Ticket/Receipt</label>
            </value>
            <value>
                <fullName>VendorNumber</fullName>
                <label>Vendor Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>