force-app/main/default/objects/Account/fields/GSA_Sin_Participant__c.field-meta.xml
<CustomField>
    <fullName>GSA_Sin_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicate of the store participates in General Services Administration - Special Item Number participant. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This field indicate of the store participates in General Services Administration - Special Item Number participant.

Responsible Owner: Business Development</inlineHelpText>
    <label>GSA Sin Participant</label>
    <type>Checkbox</type>
</CustomField>