force-app/main/default/objects/Account/fields/Has_Filed_for_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Has_Filed_for_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an account has filed for bankruptcy

Field Data: M3 Account Credit Field</description>
    <inlineHelpText>Indicates that an account has filed for bankruptcy</inlineHelpText>
    <label>Has Filed for Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>