force-app/main/default/objects/Account/fields/Has_NAM__c.field-meta.xml
<CustomField>
    <fullName>Has_NAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the M3 Account has a National Account Manager on the Account Team. This is used in sharing rules and list views.  
Type: M3
Integrated:Y</description>
    <inlineHelpText>Indicates that the M3 Account has a National Account Manager on the Account Team.</inlineHelpText>
    <label>Has NAM</label>
    <type>Checkbox</type>
</CustomField>