force-app/main/default/objects/Account/fields/HasActiveProgram__c.field-meta.xml
<CustomField>
    <fullName>HasActiveProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the Account has a related Active Program. This is to be used for Active Account validation rules.</description>
    <inlineHelpText>This field is used to determine if the Account has a related Active Program. This is to be used for Active Account validation rules.</inlineHelpText>
    <label>HasActiveProgram</label>
    <type>Checkbox</type>
</CustomField>