force-app/main/default/objects/Account/fields/HasBillingContact_BPC__c.field-meta.xml
<CustomField>
    <fullName>HasBillingContact_BPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Submit Credit Application data check. Not on Layout</description>
    <label>HasBillingContact_BPC</label>
    <type>Checkbox</type>
</CustomField>