force-app/main/default/objects/Account/fields/HasDigitalVoucher__c.field-meta.xml
<CustomField>
    <fullName>HasDigitalVoucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated via RWS_ProgramTrigger_Handler; if there is an active program under this account where Use Eligibility is true</description>
    <label>Digital Voucher Program(s)</label>
    <type>Checkbox</type>
</CustomField>