force-app/main/default/objects/Account/fields/HasInsideSalesRep__c.field-meta.xml
<CustomField>
    <fullName>HasInsideSalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates whether the account should be shared with the inside Sales Rep</description>
    <inlineHelpText>The Account has an Inside Sales Rep</inlineHelpText>
    <label>Has Inside Sales Rep</label>
    <type>Checkbox</type>
</CustomField>