force-app/main/default/objects/Account/fields/IA_Accessories_Allowed_on_Payroll_Deduct__c.field-meta.xml
<CustomField>
    <fullName>IA_Accessories_Allowed_on_Payroll_Deduct__c</fullName>
    <description>Indicates whether the employee is allowed to purchase accessories on a payroll deduction program. 
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates whether the employee is allowed to purchase accessories on a payroll deduction program. 
Data is only in Salesforce.</inlineHelpText>
    <label>Accessories Allowed on Payroll Deduction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>