force-app/main/default/objects/Account/fields/IA_Account_Category__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Category__c</fullName>
    <description>This field is used to designate Industrial Account category for this account; National or Major Account
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates the type of Industrial Account; National or Local/Major Account. Billing Preference defaults based on this setting. Entered initially in Salesforce and sent to IA. IA will override SF if different.</inlineHelpText>
    <label>&gt;National or Major Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local or Major Account</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>