force-app/main/default/objects/Account/fields/IA_Account_Matching_Comments__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Matching_Comments__c</fullName>
    <description>This field is used to relay comments regarding the exercise of matching the Accounts in SFDC to the RIMS accounts converted to IA.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Comments about the matching process. Data is only in Salesforce.</inlineHelpText>
    <label>Account Matching Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>