force-app/main/default/objects/Account/fields/IA_Account_Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Matching_Criteria__c</fullName>
    <description>This field is used to indicate how the existing SFDC account was matched to a RIMS account. This will be used in UAT and during Production validation.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>The criteria that was used to match the salesforce account to the RIMS account converted into IA.</inlineHelpText>
    <label>Account Matching Criteria</label>
    <length>20</length>
    <type>Text</type>
</CustomField>