force-app/main/default/objects/Account/fields/IA_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Name__c</fullName>
    <description>This is the name of the account in IA. Account names in RIMS and IA will not be the full company name. SFDC will retain the full company in the standard Account Name field.
Type: IA
Integrated: Y</description>
    <inlineHelpText>This is the Company Account Name in IA. Sent to Salesforce by IA.</inlineHelpText>
    <label>IA Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>