force-app/main/default/objects/Account/fields/IA_Bill_to_Address_Notes__c.field-meta.xml
<CustomField>
    <fullName>IA_Bill_to_Address_Notes__c</fullName>
    <description>This field is to capture notes regarding the Billing Address 
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Notes about the Billing Address for this company. Data is only in Salesforce.</inlineHelpText>
    <label>Bill-to Address Notes</label>
    <type>TextArea</type>
</CustomField>