force-app/main/default/objects/Account/fields/IA_Bill_to_Email_Address_Notes__c.field-meta.xml
<CustomField>
    <fullName>IA_Bill_to_Email_Address_Notes__c</fullName>
    <description>This field is to reference other details regarding the emailed invoice; such as who wants to be copied on invoice email.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Other details regarding the emailed invoice;  such as who wants to be copied on  email.</inlineHelpText>
    <label>Bill-to Email Address Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>