force-app/main/default/objects/Account/fields/IA_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>IA_Billing_Email__c</fullName>
    <description>This is the email address for sending invoices to the account
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Required if Invoice Delivery Option is Email. This is the Invoice Email Address. Data is only in Salesforce.</inlineHelpText>
    <label>Bill-to Email Address</label>
    <type>Email</type>
</CustomField>