force-app/main/default/objects/Account/fields/IA_Consolidated_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IA_Consolidated_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The account has requested a consolidated invoice 
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates the account has requested a consolidated invoice.Data is only in Salesforce.</inlineHelpText>
    <label>Obsolete Consolidated Invoice</label>
    <type>Checkbox</type>
</CustomField>