force-app/main/default/objects/Account/fields/IA_Convert_to_Central_Bill__c.field-meta.xml
<CustomField>
    <fullName>IA_Convert_to_Central_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to designate an account that was converted to central bill as part of the IA 2.0 reconciliation process
Field Type: IA
Integrated: N</description>
    <inlineHelpText>This field is used to designate an account that was converted to central bill as part of the IA 2.0 reconciliation process</inlineHelpText>
    <label>Convert to Central Bill</label>
    <type>Checkbox</type>
</CustomField>