force-app/main/default/objects/Account/fields/IA_Delivery_Options_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IA_Delivery_Options_of_Invoice__c</fullName>
    <description>These are the different ways an industrial account can receive an invoice
Type: IA
Integrated: Y</description>
    <inlineHelpText>This is the preferred option for the account to receive an invoice. Data is only in Salesforce.</inlineHelpText>
    <label>Invoice Delivery Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Invoice Online</fullName>
            </value>
            <value>
                <fullName>3rd Party Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>