force-app/main/default/objects/Account/fields/IA_Elig_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Elig_Expiration_Date__c</fullName>
    <description>The date that eligibility expires if it expires
Field Type: IA 
Integrated: N</description>
    <inlineHelpText>The date that eligibility expires if it expires.Data is only in salesforce.</inlineHelpText>
    <label>Eligibility Expiration Date</label>
    <type>Date</type>
</CustomField>