force-app/main/default/objects/Account/fields/IA_Eligibility_Expires__c.field-meta.xml
<CustomField>
    <fullName>IA_Eligibility_Expires__c</fullName>
    <description>Indicates that eligibility expires.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates that eligibility expires. Data is only in Salesforce.</inlineHelpText>
    <label>Eligibility Expires</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>