force-app/main/default/objects/Account/fields/IA_Eligibility_Notes__c.field-meta.xml
<CustomField>
    <fullName>IA_Eligibility_Notes__c</fullName>
    <description>Additional details regarding the type of authorization
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Additional details regarding the type of authorization. Data is only in salesforce.</inlineHelpText>
    <label>Eligibility Notes</label>
    <type>TextArea</type>
</CustomField>