force-app/main/default/objects/Account/fields/IA_Federal_ID_Nbr__c.field-meta.xml
<CustomField>
    <fullName>IA_Federal_ID_Nbr__c</fullName>
    <label>Federal ID Nbr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>