force-app/main/default/objects/Account/fields/IA_Final_Conference_Call_Performed__c.field-meta.xml
<CustomField>
    <fullName>IA_Final_Conference_Call_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that the final RWSC &amp; Customer conference call occurred, prior to launching a new Industrial account
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Final conference call with the account has been completed.Data is only in salesforce.</inlineHelpText>
    <label>Final Conference Call Performed</label>
    <type>Checkbox</type>
</CustomField>