force-app/main/default/objects/Account/fields/IA_Footwear_Spec_Notes__c.field-meta.xml
<CustomField>
    <fullName>IA_Footwear_Spec_Notes__c</fullName>
    <description>Additional information about IA footwear specifications.
Type: IA
Integrated: N</description>
    <inlineHelpText>Additional details about IA footwear specifications.Data is only in Salesforce.</inlineHelpText>
    <label>Footwear Spec Notes</label>
    <type>TextArea</type>
</CustomField>