force-app/main/default/objects/Account/fields/IA_ID__c.field-meta.xml
<CustomField>
    <fullName>IA_ID__c</fullName>
    <description>The unique identifier for an account in IA. 
Type: IA
Integrated: Y</description>
    <externalId>true</externalId>
    <inlineHelpText>IA Account ID. Sent to Salesforce by IA.</inlineHelpText>
    <label>IA ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>