force-app/main/default/objects/Account/fields/IA_Import_Mode__c.field-meta.xml
<CustomField>
    <fullName>IA_Import_Mode__c</fullName>
    <description>IA to SF Integration Mode set by the the IA Service and CastIron. 
Type: IA
Integrated: Y</description>
    <label>IA Import Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>