force-app/main/default/objects/Account/fields/IA_Invoice_Cycle__c.field-meta.xml
<CustomField>
    <fullName>IA_Invoice_Cycle__c</fullName>
    <description>The desired invoice cycle
Field Type: IA
Integrated: N</description>
    <inlineHelpText>The invoice cycle requested. Data is only in Salesforce.</inlineHelpText>
    <label>Invoice Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Once</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>